...
  "strings": {
    "Launchestra’ya Hoş Geldin": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Welcome to Launchestra"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Launchestra’ya Hoş Geldin"
...
    },
    "İlk Profilini Oluştur": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Create Your First Profile"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "İlk Profilini Oluştur"
...
    },
    "Profiller": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Profiles"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Profiller"
...
            "state": "translated",
            "value": "İlk hatada dur"
          }
        }
      }
    },
    "Kısayol": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Shortcut"
          }
...
    },
    "Profili Düzenle": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Edit Profile"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Profili Düzenle"
...
